[gd_scene load_steps=11 format=2]

[ext_resource path="res://resources/quiz/three-plate.png" type="Texture" id=1]
[ext_resource path="res://resources/fonts/fibberish.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://sources/game/quiz/Quiz.gd" type="Script" id=3]
[ext_resource path="res://resources/transitions/empty.png" type="Texture" id=4]
[ext_resource path="res://resources/fonts/VillainTeamUpSpiked-2Ov5e.otf" type="DynamicFontData" id=5]
[ext_resource path="res://sources/minigames/quiz/QuizAudioPlayer.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=6]
size = 34
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 50
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=9]
size = 40
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=8]
size = 42
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="QuizThreeChoices" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="BackgroundTexture" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true

[node name="Plate" type="Sprite" parent="."]
position = Vector2( 360, 640 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="AnswersLabel" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Answers1Label" type="Label" parent="AnswersLabel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 88.0
margin_top = 593.0
margin_right = -24.0
margin_bottom = -500.0
custom_fonts/font = SubResource( 6 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Answers2Label" type="Label" parent="AnswersLabel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 23.0
margin_top = 825.0
margin_right = -96.0
margin_bottom = -268.0
custom_fonts/font = SubResource( 6 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Answers3Label" type="Label" parent="AnswersLabel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 89.0
margin_top = 1048.0
margin_right = -23.0
margin_bottom = -45.0
custom_fonts/font = SubResource( 6 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="QuestionLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 80.0
margin_right = -24.0
margin_bottom = -768.0
custom_fonts/font = SubResource( 7 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Buttons" type="Node2D" parent="."]

[node name="Answer1Button" type="TouchScreenButton" parent="Buttons"]
position = Vector2( 104, 584 )
scale = Vector2( 2.3125, 0.78125 )
normal = ExtResource( 4 )
pressed = ExtResource( 4 )

[node name="Answer2Button" type="TouchScreenButton" parent="Buttons"]
position = Vector2( 23, 825 )
scale = Vector2( 2.37891, 0.746094 )
normal = ExtResource( 4 )
pressed = ExtResource( 4 )

[node name="Answer3Button" type="TouchScreenButton" parent="Buttons"]
position = Vector2( 96, 1056 )
scale = Vector2( 2.34375, 0.6875 )
normal = ExtResource( 4 )

[node name="Justification" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -360.0
margin_top = -640.0
margin_right = 360.0
margin_bottom = 640.0

[node name="BackgroundPanel" type="ColorRect" parent="Justification"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.133333, 0.133333, 0.133333, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Justification"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 236.0
margin_right = -40.0
margin_bottom = -134.0
color = Color( 1, 0.830688, 0.429688, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResponseLabel" type="Label" parent="Justification"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 56.0
margin_top = 500.0
margin_right = -56.0
margin_bottom = -156.0
custom_fonts/font = SubResource( 9 )
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="Justification"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 59.0
margin_top = 272.0
margin_right = -61.0
margin_bottom = -876.0
custom_fonts/font = SubResource( 8 )
text = "Resposta incorreta!
Deveria ter sido levado em conta que:"
align = 1
valign = 1
autowrap = true

[node name="CloseLabel" type="Label" parent="Justification"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 1144.0
margin_right = -40.0
margin_bottom = -4.0
custom_fonts/font = SubResource( 8 )
text = "Clique para fechar a justificativa"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonsJustification" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="SkipJustificationButton" type="TouchScreenButton" parent="ButtonsJustification"]
position = Vector2( 0, 39.9999 )
scale = Vector2( 2.84375, 4.84375 )
normal = ExtResource( 4 )
pressed = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
script = ExtResource( 6 )

[connection signal="pressed" from="Buttons/Answer1Button" to="." method="_on_Answer1Button_pressed"]
[connection signal="pressed" from="Buttons/Answer2Button" to="." method="_on_Answer2Button_pressed"]
[connection signal="pressed" from="Buttons/Answer3Button" to="." method="_on_Answer3Button_pressed"]
[connection signal="pressed" from="ButtonsJustification/SkipJustificationButton" to="." method="_on_SkipJustificationButton_pressed"]
